syntax = "proto3";

package elasticsearchservicepb;

option go_package = "elasticsearchservicepb/";

import "google/protobuf/timestamp.proto";

service ElasticsearchServiceGRPC {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
}

message GetUsersRequest {
    int32 offset = 1;
    int32 limit = 2;
    string sort_by = 3;
    string full_name = 4;
    string email = 5;
    string username = 6;
    string address = 7;
    string role_name = 8;
    string created_at_gte = 9;
    string created_at_lte = 10;
}

message GetUsersResponse {
  string code = 1;
  int32 status = 2;
  string message = 3;
  
  repeated User users = 4;
}

message User {
  int64 id = 1;
  string full_name = 2;
  string email = 3;
  string username = 4;
  string address = 5;
  string role_name = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}